Commit After completing Header Section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="nav-logo">
+                <img src="asset/logo/logo.png" alt="">
+            </div>
+            <div class="nav-main">
+                <ul>
+                    <li>Home</li>
+                    <li>Service</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </nav>
 
+        <!-- BANNER SECTION  -->
+        <div class="banner-section">
+            <div class="banner-contents">
+                <h1><span class="primary-color">Digital</span> Agency You <br>
+                    Can Rely Upon !</h1>
+                <p>Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper <br> metus, nibh adipisci
+                    assumenda odio, quos, senectus vehicula occaecat, <br> officiis malesuada cras.
+                </p>
+                <button class="btn redbtn" style="color: white;">Discover More</button>
+                <button class="btn">Hire Us Now</button>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
