Commit After Services Section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,62 @@
             </div>
         </div>
     </header>
+
+    <!-- MAIN  -->
+    <!-- SERVICES SECTION  -->
+    <main>
+        <section>
+            <div class="services-section">
+                <div class="services-list">
+                    <button>Services List</button>
+                    <h2><span class="primary-color">Services</span> We can Help You With !</h2>
+                    <p>Vero id posuere tempus aspernatur quaerat mollis voluptatum <br> eveniet porro viverra libero
+                        habitasse porro fames quos <br> pharetra diam cupidatat ligula! Netus! Quos dignissi mos
+                        <br>laoreet.
+                    </p>
+                    <ol>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                        <li>Lorem ipsum dolor sit.</li>
+                    </ol>
+                    <div class="author">
+                        <div class="author-details">
+                            <div class="author-image">
+                                <img src="asset/image/author.jpg" alt="">
+                            </div>
+                            <div class="author-title">
+                                <h5>George Smith <br> <small>CEO, Director</small></h5>
+                            </div>
+                        </div>
+                        <div class="author-button">
+                            <button class="red">More Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="services-boxes">
+                    <div class="left-boxes">
+                        <div class="box-1 box">
+                            <img src="asset/icons/startup.png" alt="">
+                            <h3>SEO And Content Writing</h3>
+                        </div>
+                        <div class="box-2 box">
+                            <img src="asset/icons/coding.png" alt="">
+                            <h3>Website Development</h3>
+                        </div>
+                    </div>
+                    <div class="right-boxes">
+                        <div class="box-3 box">
+                            <img src="asset/icons/digital-marketing.png" alt="">
+                            <h3>Digital Marketing</h3>
+                        </div>
+                        <div class="box-4 box">
+                            <img src="asset/icons/bar-chart.png" alt="">
+                            <h3>Graphic And Web Desigining</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
