Commit after consultancy Section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
                 </div>
             </div>
         </section>
+
+        <!-- CONSULTATION SECTION  -->
+        <div class="consultation-container">
+            <div class="consultation-number">
+                <div class="consultation-number-icon">
+                    <img src="asset/icons/phone-call.png" alt="">
+                </div>
+                <div class="consultation-number-details">
+                    <p>Get a Free Consultation</p>
+                    <h2>987 233 <br>0000</h2>
+                </div>
+            </div>
+            <div class="consultation-text">
+                <p>Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet <br> porro <br>
+                    viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.</p>
+            </div>
+            <div class="consultation-button">
+                <button>Make Appointment</button>
+            </div>
+        </div>
     </main>
 </body>
 
