--- a/index.html
+++ b/index.html
@@ -94,24 +94,65 @@
         </section>
 
         <!-- CONSULTATION SECTION  -->
-        <div class="consultation-container">
-            <div class="consultation-number">
-                <div class="consultation-number-icon">
-                    <img src="asset/icons/phone-call.png" alt="">
+        <section>
+            <div class="consultation-container">
+                <div class="consultation-number">
+                    <div class="consultation-number-icon">
+                        <img src="asset/icons/phone-call.png" alt="">
+                    </div>
+                    <div class="consultation-number-details">
+                        <p>Get a Free Consultation</p>
+                        <h2>987 233 <br>0000</h2>
+                    </div>
                 </div>
-                <div class="consultation-number-details">
-                    <p>Get a Free Consultation</p>
-                    <h2>987 233 <br>0000</h2>
+                <div class="consultation-text">
+                    <p>Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet <br> porro <br>
+                        viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.</p>
+                </div>
+                <div class="consultation-button">
+                    <button>Make Appointment</button>
                 </div>
             </div>
-            <div class="consultation-text">
-                <p>Vero id posuere tempus aspernatur quaerat mollis voluptatum eveniet <br> porro <br>
-                    viverra libero habitasse Aut ab nibh aliqua optio veniet porro viverr.</p>
+        </section>
+
+        <!-- BLOG SECTION  -->
+        <section>
+            <div class="blog-container">
+                <div class="blog-text">
+                    <h1><span class="primary-color">Blog</span> & News From Us !</h1>
+                    <p>Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! <br> Non officiis, id
+                        natus
+                        non nisl provident justo.
+                    </p>
+                </div>
+                <div class="blog-boxes">
+                    <div class="box-1 blogbox">
+                        <img src="asset/image/blog-1.jpg" alt="">
+                        <h3>Maxime rhoncus aliquet sint eu accusantium illum.
+                        </h3>
+                        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam,
+                            facilis, nascetur?.....
+                        </p>
+                    </div>
+                    <div class="box-2 blogbox">
+                        <img src="asset/image/blog-2.jpg" alt="">
+                        <h3>Maxime rhoncus aliquet sint eu accusantium illum.
+                        </h3>
+                        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam,
+                            facilis, nascetur?.....
+                        </p>
+                    </div>
+                    <div class="box-3 blogbox">
+                        <img src="asset/image/blog-3.jpg" alt="">
+                        <h3>Maxime rhoncus aliquet sint eu accusantium illum.
+                        </h3>
+                        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam,
+                            facilis, nascetur?.....
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="consultation-button">
-                <button>Make Appointment</button>
-            </div>
-        </div>
+        </section>
     </main>
 </body>
 
