--- a/index.html
+++ b/index.html
@@ -128,25 +128,26 @@
                 <div class="blog-boxes">
                     <div class="box-1 blogbox">
                         <img src="asset/image/blog-1.jpg" alt="">
-                        <h3>Maxime rhoncus aliquet sint eu accusantium illum.
+                        <h3>Aliquet sint eu accusantium illum Lorem dolor sit amet..
                         </h3>
-                        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam,
+                        <p>Malesuada error lauecusandae, corporis Lorem ipsum dolor sit amet. nec, metus numquam,
                             facilis, nascetur?.....
                         </p>
                     </div>
                     <div class="box-2 blogbox">
                         <img src="asset/image/blog-2.jpg" alt="">
-                        <h3>Maxime rhoncus aliquet sint eu accusantium illum.
+                        <h3>Maxime rhoncus aliquet sint eu accusan.
                         </h3>
-                        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam,
-                            facilis, nascetur?.....
+                        <p>Malesuada error laudantium quibusdam, volup Lorem ipsum dolor sit amet, consectetur
+                            adipisicing. tas recusandae, corporis necetur?.....
                         </p>
                     </div>
                     <div class="box-3 blogbox">
                         <img src="asset/image/blog-3.jpg" alt="">
-                        <h3>Maxime rhoncus aliquet sint eu accusantium illum.
+                        <h3>Maxime rhonantium illum.
                         </h3>
-                        <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam,
+                        <p>Malesuada error lrecusandae, corporis nec, metus numquam,
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet.
                             facilis, nascetur?.....
                         </p>
                     </div>
@@ -154,6 +155,56 @@
             </div>
         </section>
     </main>
+
+    <footer>
+        <div class="footer-container">
+            <div class="logo-box">
+                <img src="./asset/logo/logo.png" alt="" />
+                <p>
+                    Auctor blandit dolorem primis eius odit soluta molestie? Malesuada
+                    elementum aut doloremque labo.
+                </p>
+                <div class="icons">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+            </div>
+            <div class="Useful-links">
+                <h3 class="footer-title">Useful Links</h3>
+
+                <p>About us</p>
+                <p>Careers</p>
+                <p>News & Artciles</p>
+                <p>legal Notice</p>
+            </div>
+            <div class="supports">
+                <h3 class="footer-title">Supports</h3>
+
+                <p>Help Center</p>
+                <p>Contact Us</p>
+                <p>FAQ</p>
+                <p>Parent Community</p>
+            </div>
+            <div class="contact">
+                <h3 class="footer-title">Contact Information</h3>
+                <p>Feel free to contact & reach us !!</p>
+                <p>
+                    <i class="fa-solid fa-location-pin"></i>3557 Derek Drive, Orlando,
+                    Florida
+                </p>
+                <p><i class="fa-solid fa-phone-volume"></i>+1(456)657-887</p>
+                <p><i class="fa-solid fa-envelope d"></i>info@domain.com</p>
+            </div>
+        </div>
+        <p class="copy">
+            <small>Copyright &copy; 2023 ~ Digital Agency</small>
+        </p>
+    </footer>
+
+    <!-- CODED FULLY BY SAJEED ANINDA EXCEPT THE *FOOTER SECTION* WHICH IS TAKEN BY THE SOURCE ITSELF. 
+    All Rights Reserved by: https://github.com/gias-uddin-swe/digital-agency -->
 </body>
 
 </html>
